--- a/src/index.scss
+++ b/src/index.scss
@@ -13,12 +13,15 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin-bottom: 2rem;
+	margin-bottom: 5rem;
+	margin-top: 2rem;
 	gap: 10px;
 	flex-wrap: wrap;
 	border: 0.3px solid #A2B2EE;
 	padding: 5px;
 	border-radius: 10px;
+	color:#b2bee7;
+	
 	
 	h3 {
 	  color: #5F7ADB;
@@ -156,5 +159,27 @@
 	  mix-blend-mode: color-dodge;
 	}
   }
+
+
+  .link {
+	color: #c6ceed;
+	text-decoration: none;
+	cursor: pointer;
+	text-shadow: 0 0 10px #333;
   
+	&:visited {
+	  color: #c6ceed;
+	  text-decoration: none;
+	  cursor: pointer;
+	  text-shadow: 0 0 10px #333;
+	}
+  }
+  
+  .active{
+	color: #c6ceed;
+	text-decoration: none;
+	cursor: pointer;
+	text-shadow: 0 0 10px #333;
+	border-bottom: 2px solid white;
+  }
   
