--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,10 @@
 	justify-content: center;
 	align-items: center;
 	gap:1rem;	
-	height: 110vh;
-	width: 100vw;
+	min-height: 110vh;
+	width: 95vw;
+	margin-bottom: 5rem;
+	margin-left: 2.5%;
 }
 
 @keyframes dotJump {
